@@ -833,7 +833,7 @@
                                         <property name="orientation">vertical</property>
                                         <child>
                                           <widget class="GtkRadioButton" id="sleep-dpms-mode">
-                                            <property name="label" translatable="yes">Sleep</property>
+                                            <property name="label" translatable="yes">Standby</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
