@@ -1,4 +1,7 @@
 
+2009-03-11 13:33 Ali aliov@xfce.org 
+	 * : Set dpms to standby or suspend depending on the user settings
+
 2009-03-11 13:06 Ali aliov@xfce.org 
 	 * : Fix infinite loop caused by g_signal_connect+added advanced settings in the dialog
 
